tests/paczka1/small_fuzzy/40804740.err
Error in line 2: gI5bhJvFf A138 89,7
Error in line 6: 0mJQm S261 9,4
Error in line 14: nv4v S677 97,7
